--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <!-- MOBILE FIRST -->
 
 <body>
+<!-- FIRST SECTION -->
     <div class="row">
         <div class="col-12 col-s-4 col-m-2 col-l-1 d-flex justify-content-center align-items-center">1 col</div> 
         <div class="col-12 col-s-4 col-m-2 col-l-1 d-flex justify-content-center align-items-center">1 col</div> 
@@ -52,7 +53,7 @@
         <div class="col-12 col-s-1 d-flex justify-content-center align-items-center">1 col</div>
     </div>
     
-    <div class="row">
+    <div class="row pb-3">
         <div class="col-12 col-m-6">
             <div class="row nested">
                 <div class="col-4 col-m-2 d-flex justify-content-center align-items-center">nested 2 col</div>
@@ -68,6 +69,36 @@
         </div> 
     </div>
 
+<!-- SECTION 2 -->
+    <div class="row">
+        <div class="col-12"></div>
+    </div>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-11"></div>
+    </div>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10"></div>
+    </div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9"></div>
+    </div>
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-8"></div>
+    </div>
+    <div class="row">
+        <div class="col-5"></div>
+        <div class="col-7"></div>
+    </div>
+    <div class="row pb-3">
+        <div class="col-6"></div>
+        <div class="col-6"></div>
+    </div>
+
+    <h1>Offset</h1>
 
 </body>
 </html>
