--- a/index.html
+++ b/index.html
@@ -146,6 +146,36 @@
         <div class="col-11"></div>
     </div>
 
+<!-- SECTION 4 -->
+    <h1>Nested</h1>
+
+    <div class="row pb-3">
+        <div class="col-12 col-m-6">
+            <div class="row nested">
+                <div class="col-4 col-m-2 d-flex justify-content-center align-items-center"></div>
+                <div class="col-4 col-m-2 d-flex justify-content-center align-items-center"></div>
+                <div class="col-4 col-m-8 d-flex justify-content-center align-items-center"></div>
+            </div>
+        </div> 
+        <div class="col-12 col-m-6">
+            <div class="row nested">
+                <div class="col-6 d-flex justify-content-center align-items-center"></div>
+                <div class="col-6 d-flex justify-content-center align-items-center"></div>
+            </div> 
+        </div> 
+    </div>
+
+<!-- SECTION 5 -->
+    <h1>Alignment</h1>
+    <div class="row">
+        <div class="col-6 d-flex justify-content-center align-items-center">start</div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-6 d-flex justify-content-center align-items-center">center</div>
+    </div>
+    <div class="row justify-content-end pb-3">
+        <div class="col-6 d-flex justify-content-center align-items-center">end</div>
+    </div>
 
 </body>
 </html>
