--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
     <div class="row pb-3">
         <div class="col-12 col-m-6">
             <div class="row nested">
-                <div class="col-4 col-m-2 d-flex justify-content-center align-items-center"></div>
-                <div class="col-4 col-m-2 d-flex justify-content-center align-items-center"></div>
-                <div class="col-4 col-m-8 d-flex justify-content-center align-items-center"></div>
+                <div class="col-4 col-m-2"></div>
+                <div class="col-4 col-m-2"></div>
+                <div class="col-4 col-m-8"></div>
             </div>
         </div> 
         <div class="col-12 col-m-6">
             <div class="row nested">
-                <div class="col-6 d-flex justify-content-center align-items-center"></div>
-                <div class="col-6 d-flex justify-content-center align-items-center"></div>
+                <div class="col-6"></div>
+                <div class="col-6"></div>
             </div> 
         </div> 
     </div>
@@ -173,9 +173,53 @@
     <div class="row justify-content-center">
         <div class="col-6 d-flex justify-content-center align-items-center">center</div>
     </div>
-    <div class="row justify-content-end pb-3">
+    <div class="row justify-content-end">
         <div class="col-6 d-flex justify-content-center align-items-center">end</div>
     </div>
 
+    <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+            <div class="card d-flex justify-content-center align-items-center">top</div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6 d-flex align-items-center">
+            <div class="card d-flex justify-content-center align-items-center">middle</div>
+        </div>
+    </div>
+    <div class="row  pb-3">
+        <div class="col-6"></div>
+        <div class="col-6 d-flex align-items-end">
+            <div class="card d-flex justify-content-center align-items-center">bottom</div>
+        </div>
+    </div>
+
+<!-- SECTION 6 -->
+    <h1>Justify content</h1>
+    <h2>Space Around</h2>
+
+    <div class="row pb-3">
+        <div class="col-12">
+            <div class="row nested justify-content-around">
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+            </div>
+        </div> 
+    </div>
+
+    <h2>Space Between</h2>
+
+    <div class="row pb-3">
+        <div class="col-12">
+            <div class="row nested justify-content-between">
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+                <div class="col-2"></div>
+            </div>
+        </div> 
+    </div>
 </body>
 </html>
